# conkit

./: .appveyor.yml  .coveragerc  .gitignore  .landscape.yml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIB.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  doc-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
conkit/: __init__.py  _util.py  _version.py  constants.py  plot.py  version.py
conkit/applications/: Bbcontacts.py  CCMpred.py  Cdhit.py  HHblits.py  HHfilter.py  Jackhmmer.py  Psicov.py  __init__.py  bbcontacts.py  ccmpred.py  cdhit.py  hhblits.py  hhfilter.py  jackhmmer.py  map_align.py  psicov.py
conkit/command_line/: README.md  __init__.py  cli_tools.py  conkit_convert.py  conkit_msatool.py  conkit_plot.py  conkit_plus.py  conkit_precision.py  conkit_predict.py  conkit_validate.py  tools.py
conkit/core/: Contact.py  ContactCore.py  ContactFile.py  ContactFileCore.py  ContactMap.py  ContactMapCore.py  Entity.py  Sequence.py  SequenceCore.py  SequenceFile.py  SequenceFileCore.py  _Struct.py  __init__.py  _entity.py  _struct.py  contact.py  contactfile.py  contactmap.py  distance.py  distogram.py  (+9 more)
docs/: Makefile  conf.py  contents.rst  contrib.rst  doc-requirements  doc-requirements.txt  documentation.rst  examples.rst  figures.py  formats.rst  index.rst  install.rst  installation.rst  pythonapi.rst  requirements.txt  scripts.rst
scripts/: conkit.convert  conkit.msatool  conkit.plot  conkit.plot_map  conkit.precision  conkit.predict  conkit.simple
(+244 files in other folders)
